--- a/metadata.yaml
+++ b/metadata.yaml
@@ -23,6 +23,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Hyperspace'
 - !lcc 'QA'
+- GITenberg
 title: "The Mystery of Space\r\nA Study of the Hyperspace Movement in the Light of\
   \ the Evolution of New Psychic Faculties and an Inquiry into the Genesis and Essential\
   \ Nature of Space"
